Fixed typo in package.json for react homepage

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "google-clone",
   "version": "0.1.0",
-  "homepage": "https://{brandonlibertore}.github.io/{Google-Clone}",
+  "homepage": "https://brandonlibertore.github.io/Google-Clone",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
